# chromatracker

./: .gitignore  CMakeLists.txt  Editor struct.txt  README.md  app.cpp  app.h  build.sh  chroma.c  chroma.h  common.h  cursor.cpp  cursor.h  event.cpp  event.h  glutils.h  guimain.cpp  guimain.h  instrument.c  instrument.cpp  instrument.h  load_mod.c  load_mod.cpp  load_mod.h  main.cpp  pattern.c  pattern.cpp  pattern.h  playback.c  playback.cpp  playback.h  playback_lut.cpp  playback_lut.h  sample.h  settings.gradle  song.c  song.cpp  song.h  songobj.h  stringutil.cpp  stringutil.h  (+5 more)
app/: build.gradle  gradle.properties
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Cursor.cpp  Cursor.h  InstSample.cpp  InstSample.h  Instrument.cpp  Instrument.h  Log.h  Modulation.cpp  Modulation.h  Pattern.cpp  Pattern.h  Song.cpp  Song.h  Units.cpp  Units.h  Util.h
app/src/main/cpp/android/: EditProperties.cpp  native-lib.cpp
app/src/main/cpp/file/: FileUtils.cpp  FileUtils.h  WavLoader.cpp  WavLoader.h  XiLoader.cpp  XiLoader.h  XmLoader.cpp  XmLoader.h
app/src/main/cpp/play/: InstrumentPlayback.cpp  InstrumentPlayback.h  ModulationPlayback.cpp  ModulationPlayback.h  SamplePlayback.cpp  SamplePlayback.h  SongPlayback.cpp  SongPlayback.h  State.cpp  State.h  TrackPlayback.cpp  TrackPlayback.h
app/src/main/java/com/vantjac/chromatracker/: EditProperties.java  InstrumentPropertiesActivity.java  MainActivity.java  SamplePropertiesActivity.java  SongPropertiesActivity.java
app/src/main/res/layout/: activity_main.xml  instrument_properties.xml  sample_properties.xml  song_properties.xml
app/src/main/res/values/: strings.xml
assets/: README.md
edit/: editor.cpp  editor.h  operation.h  songops.cpp  songops.h  undoer.hpp
file/: browser.cpp  browser.h  chroma.h  chromaloader.cpp  chromaloader.h  chromawriter.cpp  chromawriter.h  itdecompress.hpp  itloader.cpp  itloader.h  types.cpp  types.h
glad/: glad.c  glad.h
gradle/wrapper/: gradle-wrapper.properties
play/: jam.cpp  jam.h  playunits.h  sampleplay.cpp  sampleplay.h  songplay.cpp  songplay.h  trackplay.cpp  trackplay.h
ui/: draw.cpp  draw.h  font.cpp  font.h  layout.cpp  layout.h  settings.h  text.cpp  text.h  theme.h  touch.h  ui.h
ui/panels/: browser.cpp  browser.h  eventkeyboard.cpp  eventkeyboard.h  eventsedit.cpp  eventsedit.h  sampleedit.cpp  sampleedit.h  sectionedit.cpp  sectionedit.h  songedit.cpp  songedit.h  trackedit.cpp  trackedit.h
ui/widgets/: button.cpp  button.h  slider.cpp  slider.h  spinner.cpp  spinner.h
